SAM-630  add javadoc plugin
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@69374 66ffb92e-73f9-0310-93c1-f5514f145a0a